--- a/ritual/Assembly-CSharp.csproj
+++ b/ritual/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Ritual\Scripts\Bird.cs" />
      <Compile Include="Assets\Ritual\Scripts\GazeUI\BaseGazeUIComponent.cs" />
      <Compile Include="Assets\Ritual\Scripts\GazeUI\QuitGazeUI.cs" />
      <Compile Include="Assets\Ritual\Scripts\Managers\IntroManager.cs" />
