--- a/ritual/Assembly-CSharp.csproj
+++ b/ritual/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\Ritual\Scripts\Bird.cs" />
      <Compile Include="Assets\Ritual\Scripts\GazeUI\BaseGazeUIComponent.cs" />
      <Compile Include="Assets\Ritual\Scripts\GazeUI\QuitGazeUI.cs" />
+     <Compile Include="Assets\Ritual\Scripts\Managers\GameManager.cs" />
      <Compile Include="Assets\Ritual\Scripts\Managers\IntroManager.cs" />
      <Compile Include="Assets\Ritual\Scripts\PatternRecognition\Pattern.cs" />
      <Compile Include="Assets\Ritual\Scripts\PatternRecognition\PatternRecognizer.cs" />
