--- a/ritual/ritual.CSharp.csproj
+++ b/ritual/ritual.CSharp.csproj
@@ -68,8 +68,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Ritual\Scripts\Bird.cs" />
+    <Compile Include="Assets\Ritual\Scripts\GazeUI\BaseGazeUIComponent.cs" />
+    <Compile Include="Assets\Ritual\Scripts\GazeUI\QuitGazeUI.cs" />
+    <Compile Include="Assets\Ritual\Scripts\Managers\IntroManager.cs" />
     <Compile Include="Assets\Ritual\Scripts\PatternRecognition\Pattern.cs" />
     <Compile Include="Assets\Ritual\Scripts\PatternRecognition\PatternRecognizer.cs" />
+    <Compile Include="Assets\Ritual\Scripts\Utils.cs" />
+    <Compile Include="Assets\TestMovement.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
