adding clouds to scene
Adding clouds to scene

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ sysinfo.txt
 *.tmp
 
 .DS_Store
+*.csproj
+*.csproj
+ritual/Assembly-CSharp-Editor.csproj
+*.meta
+ritual/Assembly-CSharp-Editor.csproj
+*.csproj
