Adding effects pack and fixing material assignment on bird
Adding effects pack and fixing material assignment on bird

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ ritual/Assembly-CSharp-Editor.csproj
 *.meta
 ritual/Assembly-CSharp-Editor.csproj
 *.csproj
+*.csproj
+ritual/Assembly-CSharp-Editor.csproj
+*.csproj
+ritual/Assembly-CSharp.csproj
